# QuickFPS

./: .gitignore  CMakeLists.txt  Note1.md  README.md
client/: CMakeLists.txt  Note1.md
client/docs/: Note2.md  史诗级传奇死亡代码.cpp
client/src/: main.cpp
client/src/CAPI/: c_api.cpp  c_api.h
client/src/Game/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  Input.cpp  Input.h  Map.h  Physics.cpp  Player.cpp  Player.h  World.cpp  World.h
client/src/Input/: Input.cpp  Input.h
client/src/Network/: Network.cpp  Network.h  ProtocolImpl.cpp  Serialize.cpp  Serialize.h  SerializeTool.h  networkapi.cpp  networkapi.h
client/src/Network/Protos/: gamedata.options  gamedata.proto  sensor.options  sensor.proto
client/src/Network/c_protos/: gamedata.pb.c  gamedata.pb.h  sensor.pb.c  sensor.pb.h
client/src/Renderer/: Renderer.cpp  Renderer.h
client/src/Serialize/: Serialize.cpp  Serialize.h  SerializeTool.h
client/src/Serialize/Protos/: gamedata.proto
client/src/Serialize/c_protos/: gamedata.pb.c  gamedata.pb.h
client/src/Sync/: Sync.h
client/src/Util/: Convert.h  Global.h  NetworkStructures.h  Util.h  rayimpls.cpp  rcamera.h
server/: .gitignore  go.mod  main.go  makeproto.sh  ser_config
server/pb/proto/: gamedata.pb.go
server/proto/: gamedata.options  gamedata.proto
server/wldlib/: wldlib.go
src/: main.cpp
src/Game/: Camera.h  Entity.cpp  Entity.h  Input.cpp  Input.h  Physics.cpp  Physics.h  Player.cpp  Player.h  World.cpp  World.h
src/Renderer/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h
src/Sync/: Sync.cpp  Sync.h
